fix path of icon in index.html

--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href='%PUBLIC_URL%/socket.png'/>
+    <link rel="icon" type="image/png" href='/public/socket.png'/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>socketChat</title>
     <meta name="description" content="Simple chat app using Node, Express, React, and Socket.io"/>
